# MouseF4

./: CMakeLists.txt  README.md  toolchain.cmake
BOM/: m_PCBA_BOM.xlsx
Core/Inc/: button.h  delay_timer.h  eeprom.h  led.h  main.h  mouse.h  mouse_keydefs.h  mouse_parts.h  sensor.h  sensor_firmware.h  stm32f4xx_hal_conf.h  wheel.h
Core/Src/: button.c  delay_timer.c  eeprom.c  led.c  main.c  mouse.c  sensor.c  wheel.c
Cube_IDE_Exports/: .cproject  .mxproject  .project  MouseF4.ioc  MouseF4.launch
ECAD/Button_Grid/: button_grid-cache.lib  button_grid.kicad_pcb  button_grid.net  button_grid.pro  button_grid.sch  button_grid.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
ECAD/Button_Grid/button_grid.pretty/: SW_KS11R21CQD.kicad_mod
ECAD/Button_Grid/gerber/: button_grid-B_Cu.gbr  button_grid-B_Mask.gbr  button_grid-B_Paste.gbr  button_grid-B_SilkS.gbr  button_grid-Edge_Cuts.gbr  button_grid-F_Cu.gbr  button_grid-F_Mask.gbr  button_grid-F_Paste.gbr  button_grid-F_SilkS.gbr  button_grid-NPTH.drl  button_grid-PTH.drl  button_grid-job.gbrjob
ECAD/MCU_Board/: _autosave-microcontroller.sch  connectors.sch-bak  fp-lib-table  microcontroller.sch  microcontroller.sch-bak  mouse_proj-cache.lib  mouse_proj.csv  mouse_proj.kicad_pcb  mouse_proj.kicad_pcb-bak  mouse_proj.net  mouse_proj.pro  mouse_proj.sch  mouse_proj.xml  peripherals.sch
ECAD/MCU_Board/assembly/: mouse_proj-all-pos.csv  mouse_proj-top-pos.csv
ECAD/MCU_Board/gerber/: mouse_proj-B_Cu.gbr  mouse_proj-B_Mask.gbr  mouse_proj-B_Paste.gbr  mouse_proj-B_SilkS.gbr  mouse_proj-Edge_Cuts.gbr  mouse_proj-F_Cu.gbr  mouse_proj-F_Mask.gbr  mouse_proj-F_Paste.gbr  mouse_proj-F_SilkS.gbr  mouse_proj-In1_Cu.gbr  mouse_proj-In2_Cu.gbr  mouse_proj-NPTH.drl  mouse_proj-PTH.drl
ECAD/MCU_Board/mouse_proj.pretty/: Crystal_SMD_3225-4Pin_3.2x2.5mm.kicad_mod
MCAD/: keycaps3.SLDPRT  mouse_base.SLDPRT  mouse_housing.SLDPRT
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
STM32_HAL/Src/: stm32f4xx_hal_msp.c
USB_DEVICE/App/: usbd_custom_hid_if.c  usbd_desc.c
device/: STM32F412RETX_FLASH.ld  STM32F412RETX_RAM.ld
